<resources>
    <string name="app_name">Usilearn</string>
    <string name="nomeet">You have no meetings scheduled.</string>
    <string name="yesmeet">You have a meeting scheduled for tomorrow. Click here to cancel it.</string>
    <string name="calculus">Calculus</string>
    <string name="computer_architecture">Computer Architecture</string>
    <string name="add_topic">Add Topic</string>
    <string name="your_topics">YOUR TOPICS</string>
    <string name="algorithms">Algorithms</string>
    <string name="choose_a_new_topic">CHOOSE A NEW TOPIC</string>
    <string name="list_of_tutors">List of tutors</string>
    <string name="richard_algorithms_tutor">Richard, Algorithms tutor</string>
    <string name="organize_meeting">Organize meeting</string>
    <string name="rickycontact">Email: rickyb.usi.ch\nTelephone: 340000000</string>
    <string name="find_a_tutor">Find a tutor</string>
    <string name="q1">How do you input a string in python?\nBy User#251</string>
    <string name="a1">Just use input() ;)\nBy Richard</string>
    <string name="qna">Questions and answers</string>
    <string name="view">View</string>
    <string name="q2">If a function is O(n) is it also O(logn)?\nBy User#285</string>
    <string name="a2" />
    <string name="empty" />
    <string name="send">send</string>
    <string name="hint">Type your answer here</string>
</resources>
